# cattywampus

./: .bumpversion.toml  .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.adoc  DEBIAN_PACKAGING.md  README.adoc  build-app  install  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run-tests  setup.py  uninstall
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  ENHANCEMENT.yml
.github/workflows/: release.yml
.pybuild/cpython3_3.13/: .pydistutils.cfg
debian/: cattywampus.postinst.debhelper  cattywampus.prerm.debhelper  cattywampus.substvars  changelog  control  files  postinst  prerm  rules
debian/cattywampus/DEBIAN/: control  md5sums  postinst  prerm
debian/cattywampus/usr/lib/python3/dist-packages/: main.py  mclogger.py  version.py
debian/cattywampus/usr/share/doc/cattywampus/: LICENSE  copyright
examples/: QUICK_ACTION_TROUBLESHOOTING.md
examples/Clean with cattywampus.workflow/Contents/: document.wflow  info.plist
src/: config.example.toml  main.py  mcconfig.py  mclogger.py  mcoptions.py  nautilus_extension.py  version.py  version_info.py
src/cattywampus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/debian/: changelog.template  control.template
templates/docs/: CONTRIBUTING.adoc.template  README.adoc.template
templates/macos/: document.wflow.template  info.plist.template
templates/windows/: file_version_info.txt.template  setup.iss.template
test-data/: audio_only.mkv  corrupted.mkv  multi_subtitles.mkv  normal_with_metadata.mkv  tiny.mkv  video_only.mkv
tests/: conftest.py  test_audio_track_clearing.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_errors.py  test_configuration_integration.py  test_debian_packaging.py  test_dry_run_simple.py  test_edge_cases.py  test_error_handling_integration.py  test_file_errors.py  test_file_processing_edge_cases.py  test_folder_processing.py  test_helpers.py  test_install_script.py  test_integration.py  test_logger_errors.py  test_main.py  test_main_function_edge_cases.py  test_path_processing.py  test_platform_specific.py  test_python_version_logging.py  test_stdout_logging.py  test_stdout_only_logging.py  test_subprocess_error_handling.py  test_subprocess_handling.py  test_subtitle_processing.py  test_tool_detection_integration.py  test_tool_initialization.py
(+3 files in other folders)
